--- a/style.css
+++ b/style.css
@@ -7,12 +7,11 @@
     --shadow: rgba(0, 0, 0, 0.16) 0px 1px 5px;
 }
 
+
 body {
-    height: 100vh;
     background-color: var(--light-color);
     font-size: 18px;
     font-weight: 500;
-
 }
 /* header */
 
@@ -167,15 +166,42 @@ label[for="is-read"] {
     width: 100%;
 }
 
-.error-msg {
-    display: none;
-    color: red;
+.btn-green {
+    background-color: lightgreen;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: bolder;
+    border: 2px solid lightgreen;
+    cursor: pointer;
+    font-weight: bolder;
+    padding: 5px 0px;
+    width: 50px;
 }
 
-.error-msg.active {
-    display: block;
-    margin-top: -15px;
+.removeBtn {
+    background-color: crimson;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: bolder;
+    border: 2px solid crimson;
+    cursor: pointer;
+    font-weight: bolder;
+    width: 60px;
+    color: white;
 }
+
+.btn-red {
+    background-color: rgb(228, 83, 83);
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: bolder;
+    border: 2px solid rgb(228, 83, 83);
+    cursor: pointer;
+    font-weight: bolder;
+    padding: 5px 0px;
+    width: 50px;
+}
+
 
 .input {
     width: 100%;
@@ -206,4 +232,6 @@ input[type="checkbox"] {
     font-weight: bolder;
     padding: 10px 0px;
 }
+
+
 
